--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -50,5 +50,5 @@ jobs:
             cd rent_app
             git reset --hard HEAD
             git pull
-            docker compose -f docker-compose.yml up --build -d
+            docker compose -f docker-compose.production.yml up --build -d
             docker exec app php artisan optimize
