--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,7 +39,7 @@ jobs:
     name: Deploy to DigitalOcean
     runs-on: ubuntu-latest
     steps:
-      - name: executing remote ssh commands using password
+      - name: executing remote ssh commands using paFssword
         uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.HOST }}
