--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,16 +41,16 @@ services:
             
     web:
         container_name: web
-        image: nginx:alpine  # Use the Nginx image
+        image: nginx:alpine  
         ports:
-            - "8000:80"  # Map port 9000 on the host to port 80 inside the container
+            - "8000:80"  
         volumes:
-            - .:/var/www  # Mount the Laravel application directory
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Use our Nginx config
+            - .:/var/www  
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf  
         depends_on:
-            - app  # Ensure PHP-FPM is started before Nginx
+            - app  
         networks:
-            - app-network  # Connect to the custom network
+            - app-network
 
 
             
@@ -62,7 +62,7 @@ services:
         volumes:
             - .:/var/www
         networks:
-            - app-network  # Corrected network to use app-network
+            - app-network  
         command: bash -c "npm install && npm run build"
 
 volumes:
